--- a/caculator/cal.html
+++ b/caculator/cal.html
@@ -27,7 +27,7 @@
       <input type="button" class="operator" value="-">
       <input type="button"  class="dot"  value=".">
       <input type="button" value="0" onclick="document.forms.output.value+='0'">
-      <input type="button" class="operator result" value="=" onclick="document.forms.output.value=eval(document.forms.ouput.value)" >
+      <input type="button" class="operator result" value="=" onclick="document.forms.output.value =eval(document.forms.output.value)">
     </form>
   </div>
 </body>
